[package]
name = "roblox-auto-patcher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
base64 = "0.13.0"
hex = "0.4.2"
rsa = { version = "0.9.6", features = ["pem", "std", "u64_digit", "pkcs5", "hazmat", "sha1", "sha2", "nightly"] }
rand = "0.8.4"